--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="n">
         <activity
+            android:name=".resources.CameraActivity"
+            android:exported="false" />
+        <activity
             android:name=".resources.MapsActivity"
             android:exported="false" />
 
@@ -36,11 +39,14 @@
             android:value="@string/google_api_key" />
 
         <activity
+
             android:name=".MainActivity"
             android:exported="false"
             android:label="@string/title_activity_login"
             android:launchMode="singleTop" />
         <activity
+
+            android:configChanges="uiMode"
             android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
