--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:required="true" />
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:name=".AlercomApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
